Reverting debug mode from config gui

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -678,7 +678,7 @@
 			//============================
 			//		for debugging
 
-			setupSpecificTable("DTCInterfaceTable","27",""); return;
+			// setupSpecificTable("DTCInterfaceTable","27",""); return;
 			//setupSpecificTable("XDAQContextTable","2","setupTableViewMode('anchorTag-XDAQContextTable');"); return;
 
 			//setupSpecificTableGroup("artdaqFclTest","46","","anchorTag-RawDataSaverConsumerTable"); return;			
