--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -1237,7 +1237,7 @@
 					, false /*unique*/
 					, 255 /*permissionsString*/
 					, "icon-ControlsDashboard.png" /*imageURL*/
-					, "SlowControlsDashboard.html?urn=" /*windowContentURL*/
+					, location.href.substring(0,location.href.indexOf("html")+4) + "/SlowControlsDashboard.html?urn=" /*windowContentURL*/
 					, "ots::SlowControlsDashboardSupervisor" /*linkedApp*/
 					, /*parameters*/
 					"page_name=" + fullPathToPage
