Addressing Pasha's request with FSM cancel popup dialog that Cancel as the negation of a Cancel operation is ambiguous, so changing the buttons to Yes/No

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -1177,7 +1177,10 @@
                 						"Request?RequestType=cancelStateMachineTransition",
                 						""/*post data*/,
 										0 /*no handler*/);
-									},0,"#efeaea",0,"#770000");	
+									},0,"#efeaea",0,"#770000", //prompt, func, val, bgColor, textColor, borderColor,
+									undefined, undefined, undefined, //getUserInput, dialogWidth, cancelFunc, 
+									undefined, undefined, undefined, //yesButtonText, noAutoComplete, defaultUserInputValue, 
+									"No"); //cancelButtonText
                 			
                 			return;
                 		}
