--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -254,6 +254,10 @@
 			float: left;
 		}
 
+		.treeNode-Value-nodeEditType-link {
+			white-space: 			 nowrap;
+		}
+
 		/*
 		.treeNode-Value:hover {
 			background-color:	rgb(218, 194, 194);
@@ -4082,7 +4086,7 @@
 
 				if (nodeEditType == "link")
 					treeViewHandlerStr_ +=
-						"<td><div style='margin-top:-4px; float:left;'>" + //to account for not being in value node
+						"<td><div style='margin-top:-1px; margin-left:70px; float:left;'>" + //to account for not being in value node
 						"<div class='treeNode-Value-editIcon' id='treeNode-Value-editCommentIcon-" +
 						(depth + "-" + uid) + "' " +
 						"onclick='handleTreeNodeClick(" +
@@ -7681,7 +7685,7 @@
 							Debug.log("Select table changed: " + selectLinkTableName +
 								" - " + selectLinkId);
 							localGetLinkToChoices(); //re-request the linkToChoices
-						};
+						}; //end localLinkEditSelectOnChangeHandler()
 
 						sel.onchange = localLinkEditSelectOnChangeHandler;
 						selId.onchange = localLinkEditSelectOnChangeHandler;
@@ -7696,7 +7700,9 @@
 							//show uid info box			
 							var uel = document.getElementById("treeView-editLink-uidInfo");
 							uel.style.display = "block";
-							Debug.log("sneak peak UID");
+							Debug.log("sneak peak UID","/" +
+								_editingCellEl.getElementsByTagName("select")[0].value + "/" +
+								selId.value + "/");
 
 							var modifiedTables = ""; //csv table, temporay version,...
 							for (var j = 0; j < treeMemberNames_.length; ++j)
@@ -7720,13 +7726,13 @@
 								function (req) {
 									var err = DesktopContent.getXMLValue(req, "Error");
 									if (err) {
-										uel.innerHTML = "Error occurred.";
+										uel.innerHTML = "Error occurred locating record '" + selId.value + ".'";
 										return;
 									}
 
 									var warn = DesktopContent.getXMLValue(req, "Warning");
 									if (warn) {
-										uel.innerHTML = "Warning occurred.";
+										uel.innerHTML = "Warning occurred locating record '" + selId.value + ".'";
 										return;
 									}
 
@@ -7753,21 +7759,20 @@
 
 
 					var linkTableVersion = -1;
-					for (var j = 0; j < treeMemberNames_.length; ++j)
-						if (selectLinkTableName == treeMemberNames_[j])
-						{
-							linkTableVersion = treeMemberVersions_[j];
-							break;
-						}
+					if(selectLinkTableName != ConfigurationAPI._DATATYPE_LINK_DEFAULT) //skip search if NO_LINK
+						for (var j = 0; j < treeMemberNames_.length; ++j)
+							if (selectLinkTableName == treeMemberNames_[j])
+							{
+								linkTableVersion = treeMemberVersions_[j];
+								break;
+							}
 					if (linkTableVersion == -1)
 					{
 						//if there is no valid table name, 
 						//	then jump to html creation
 
-						Debug.log("Invalid tree member table targeted, could not find able '" +
-							treeEditingTargetTable_ + "' in the list of tree tables. " +
-							"Perhaps the tree needs to be refreshed? " +
-							"Or the table needs to be added to one of the active groups?");//,Debug.HIGH_PRIORITY);
+						Debug.log("Could not find table '" +
+							selectLinkTableName + "' in the list of tree tables.");
 
 						localCreateLinkEditHTML([], [], []);
 						return;
@@ -8045,7 +8050,7 @@
 
 						Debug.log("pairColTable=" + pairColTable);
 
-						if (pairColTable == "NO_LINK") 
+						if (pairColTable == ConfigurationAPI._DATATYPE_LINK_DEFAULT) 
 						{
 							Debug.log("Invalid table name.");
 							return obj;
@@ -8682,7 +8687,7 @@
 					var controlString;
 
 					if (colType.indexOf("ChildLink-") == 0 &&
-							_editingCellElOldValue != "NO_LINK") 
+							_editingCellElOldValue != ConfigurationAPI._DATATYPE_LINK_DEFAULT) 
 					{
 						var backLinkStr = "setupSpecificTable(\\\"" + 
 								_currentTableName + "\\\",\\\"" +
@@ -8790,25 +8795,25 @@
 			if (el && !popUpEl && !_editingCellEl) 
 			{
 				//NOTE: Firefox and Chrome have different keycodes for +/-
-				var expandKeys = [65, 69, 190, 221, 187, 61]; // a, e, >, }, +, FF+ (no shift needed)
-				var hideKeys = [90, 77, 188, 219, 189, 173]; // z, m, <, {, -, FF- (no shift needed)
+				var expandKeys = ['a', 'e', '>', '.', '}', ']', '+', '='];
+				var hideKeys =   ['z', 'm', '<', ',', '{', '[', '-', '_'];
 
-				//Debug.log("treeView bodyKey " + e.keyCode);
+				//Debug.log("treeView bodyKey " + e.key);
 
 				for (var i = 0; i < expandKeys.length; ++i)
-					if (expandKeys[i] == e.keyCode) 
+					if (expandKeys[i] == e.key) 
 					{
 						//handle expand
-						Debug.log("treeView bodyKey expand " + e.keyCode);
+						Debug.log("treeView bodyKey expand " + e.key);
 						expandTreeChildrenDepth();
 						break;
 					}
 
 				for (var i = 0; i < hideKeys.length; ++i)
-					if (hideKeys[i] == e.keyCode) 
+					if (hideKeys[i] == e.key) 
 					{
 						//handle hide
-						Debug.log("treeView bodyKey hide " + e.keyCode);
+						Debug.log("treeView bodyKey hide " + e.key);
 						hideTreeChildrenDepth();
 						break;
 					}
@@ -8820,22 +8825,24 @@
 		//keyHandler
 		function keyHandler(e, keyEl) 
 		{
-			var TABKEY = 9;
-			var ENTERKEY = 13;
-			var UPKEY = 38;
-			var DNKEY = 40;
-			var ESCKEY = 27;
+			// var TABKEY = 9;
+			// var ENTERKEY = 13;
+			// var UPKEY = 38;
+			// var DNKEY = 40;
+			// var ESCKEY = 27;
 			//Debug.log("key " + e.keyCode);
+			//keyCode is deprecated, switching to key
 
 			var shiftIsDown;
+			// var key;
 			if (window.event) 
 			{
-				key = window.event.keyCode;
+				// key = window.event.keyCode;
 				shiftIsDown = !!window.event.shiftKey; // typecast to boolean
 			}
 			else
 			{
-				key = e.which;
+				// key = e.which;
 				shiftIsDown = !!e.shiftKey;	// typecast to boolean
 			}
 			//Debug.log("shift=" + shiftIsDown);
@@ -8850,7 +8857,7 @@
 				{
 					tel = tel[0];
 					//handle special keys for text area
-					if (e.keyCode == TABKEY) 
+					if (e.key == "Tab") 
 					{
 						Debug.log("tab.");
 						if (e.preventDefault)
@@ -8869,8 +8876,8 @@
 			//tab key jumps to next cell with a CANCEL
 			//	(enter key does same except saves/OKs value)
 			//	shift is reverse jump
-			if (e.keyCode == TABKEY || e.keyCode == ENTERKEY ||
-				e.keyCode == UPKEY || e.keyCode == DNKEY) 
+			if (e.key == "Tab" || e.key == "Enter" ||
+				e.key == "ArrowUp" || e.key == "ArrowDown") 
 			{
 				//this.value += "    ";
 				if (e.preventDefault)
@@ -8878,7 +8885,7 @@
 
 
 				editCellOK();
-				if (e.keyCode == ENTERKEY) //dont move to new cell
+				if (e.key == "Enter") //dont move to new cell
 					return false;
 
 				//detect tree view
@@ -8920,20 +8927,20 @@
 				{
 					if (!_tableViewIsTransposed) 
 					{
-						if (e.keyCode == TABKEY || e.keyCode == ENTERKEY)
+						if (e.key == "Tab" || e.key == "Enter")
 							newCol += (shiftIsDown ? -1 : 1);
-						else if (e.keyCode == UPKEY)
+						else if (e.key == "ArrowUp")
 							--newRow;
-						else if (e.keyCode == DNKEY)
+						else if (e.key == "ArrowDown")
 							++newRow;
 					}
 					else 
 					{
-						if (e.keyCode == TABKEY || e.keyCode == ENTERKEY)
+						if (e.key == "Tab" || e.key == "Enter")
 							newRow += (shiftIsDown ? -1 : 1);
-						else if (e.keyCode == UPKEY)
+						else if (e.key == "ArrowUp")
 							--newCol;
-						else if (e.keyCode == DNKEY)
+						else if (e.key == "ArrowDown")
 							++newCol;
 					}
 
@@ -8955,15 +8962,15 @@
 
 				return false;
 			}
-			else if (e.keyCode == ESCKEY) 
+			else if (e.key == "Escape") 
 			{
 				if (e.preventDefault)
 					e.preventDefault();
 				editCellCancel();
 				return false;
 			}
-			else if ((e.keyCode >= 48 && e.keyCode <= 57) ||
-				(e.keyCode >= 96 && e.keyCode <= 105))// number 0-9
+			else if (e.key == "0" || // numbers 0-9
+				((e.key|0) >= 1 && (e.key|0) <= 9))
 			{
 				//if child link cell or boolean cell			
 				var sel;
@@ -8975,11 +8982,7 @@
 						sel = sel[sel.length - 1]; //assume the last select in the cell is the select
 
 					//select based on number
-					var selNum;
-					if (e.keyCode >= 96)
-						selNum = e.keyCode - 96;
-					else
-						selNum = e.keyCode - 48;
+					var selNum = (e.key|0);
 
 					sel.selectedIndex = selNum % (sel.options.length);
 					sel.focus();
@@ -10311,7 +10314,7 @@
 									tableIndex = j;
 									break;
 								}
-							//allow broken links, for example "NO_LINK"
+							//allow broken links, for example "NO_LINK" ConfigurationAPI._DATATYPE_LINK_DEFAULT
 							//							if(tableIndex == -1)
 							//							{
 							//								Debug.log("Invalid linked tree member table!",Debug.HIGH_PRIORITY);
@@ -10646,7 +10649,7 @@
 					//some types should be handled before cell is cleared
 					//	e.g. for continuation of editing, like "table-newGroupRow"
 					//	and "table-newUIDRow"
-					if (treeEditingNodeType_ == "table-newGroupRow") //spawns from group link edit)
+					if (treeEditingNodeType_ == "table-newGroupRow") //spawns from group link edit
 					{
 						//clear children and re-toggle if shown	
 						//then 
@@ -10671,10 +10674,11 @@
 						_editingCellEl.getElementsByTagName("select")[0].onchange();
 						return;
 					}
-					else if (treeEditingNodeType_ == "table-newUIDRow") //spawns from uid link edit)
+					else if (treeEditingNodeType_ == "table-newUIDRow") //spawns from uid link edit
 					{
-						//reload members uid dropdown
-						_editingCellEl.getElementsByTagName("select")[0].onchange(newValue);
+						//reload members uid dropdown (onchange ==> localLinkEditSelectOnChangeHandler)
+						_editingCellEl.getElementsByTagName("select")[1].onchange(undefined /*event*/, 
+							newValue);
 						return;
 					}
 
@@ -12234,7 +12238,7 @@
 						_editingCellEl.innerHTML = "";
 
 						if (_editingCellType.indexOf("ChildLink-") == 0 &&
-							str != "NO_LINK") 
+							str != ConfigurationAPI._DATATYPE_LINK_DEFAULT) 
 						{
 							var astr = "";
 							astr += "<a href='#'>"; //for show
@@ -12259,7 +12263,7 @@
 						_editingCellEl.innerHTML = "";
 
 						if (_editingCellType.indexOf("ChildLink-") == 0 &&
-							str != "NO_LINK") 
+							str != ConfigurationAPI._DATATYPE_LINK_DEFAULT) 
 						{
 							var astr = "";
 							astr += "<a href='#'>"; //for show
@@ -12322,7 +12326,7 @@
 					_editingCellEl.innerHTML = "";
 
 					if (_editingCellType.indexOf("ChildLink-") == 0 &&
-						str != "NO_LINK") 
+						str != ConfigurationAPI._DATATYPE_LINK_DEFAULT) 
 					{
 						var astr = "";
 						astr += "<a href='#'>"; //for show
@@ -12447,7 +12451,7 @@
 					_editingCellEl.innerHTML = "";
 
 					if (_editingCellType.indexOf("ChildLink-") == 0 &&
-						_editingCellElOldValue != "NO_LINK") 
+						_editingCellElOldValue != ConfigurationAPI._DATATYPE_LINK_DEFAULT) 
 					{
 						var astr = "";
 						astr += "<a href='#'>"; //for show
@@ -17030,7 +17034,7 @@
 					else if (c == 0 && r == _CONFIG_DATA_ROW_OFFSET - 1)
 						str += "Row";
 					else if (r >= _CONFIG_DATA_ROW_OFFSET && colTypes[c].indexOf("ChildLink-") == 0 &&
-						val != "NO_LINK") 
+						val != ConfigurationAPI._DATATYPE_LINK_DEFAULT) 
 					{
 						//apply link 
 						str += "<a href='#'>"; //show link just for show ... goto is in Edit selectThisCell
