Fixed Checkpoint quote bug on tooltip

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -418,7 +418,7 @@
 					"\n<INDENT>" + 
 						"1. <b>NumberOfStateMachineBroadcastThreads:</b>\n<INDENT>A value greater than one will use extra threads, in parallel, to notify components in your <i>otsdaq</i> system that follow the State Machine. For example, If you have many components, notifying them in parallel to 'Configure' can save a lot of time. " +
 						"</INDENT>\n2. <b>EnableStateChangesOverUDP:</b>\n<INDENT>Setting this field to true will open a UDP port that accepts state machine transition commands (The IP : Port address is specified by the fields <b>IPAddressForStateChangesOverUDP</b> : <b>PortForStateChangesOverUDP</b>). You can also enable an acknowledgement UDP reply by setting <b>EnableAckForStateChangesOverUDP</b> to true. This may be useful, for example, for synchronizing multiple seperated DAQ systems. " +
-						"</INDENT>\n3. <b>LinkToStateMachineTable:</b>\n<INDENT>Linking to the <b>StateMachineTable</b>
+						"</INDENT>\n3. <b>LinkToStateMachineTable:</b>\n<INDENT>Linking to the <b>StateMachineTable</b>" +							
 					"</INDENT></INDENT>" +
 					"</INDENT>"	);				
 								
