A lot of code and defaults cleanup. Verified and cleaned up ECL Supervisor for use with system log messages --> demonstrated on emphatic ECL elog.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -611,25 +611,24 @@
 //			
 //			return;
 			
-			var windowTooltip = "Welcome to the Configuration GUI. Here you can manipulate every configuration " +
+			var windowTooltip = "Welcome to the <b>Configuration GUI</b>. Here you can manipulate every configuration " +
 				"parameter in your entire <i>otsdaq</i> system. \n\n" +
-				"The organization of the Configuration GUI is as follows:\n" +
+				"If you are new to configuring <i>otsdaq</i>, take a look at the <a href='https://otsdaq.fnal.gov/tutorials/first_demo/topics/configuration_primer.html' target='_blank'>otsdaq Configuration Primer</a>. There are also many helpful <a href='https://otsdaq.fnal.gov/tutorials_v2/' target='_blank'>tutorials</a> on configuring <i>otsdaq</i>.\n\n" +
+				"The organization of the <b>Configuration GUI</b> is as follows:\n" +
 				"There are links at the top of the page to switch between the main views" +
-				" 'System View', 'Group View', and " +
-				"'Table View'; " +
+				" '<b>System View</b>', '<b>Group View</b>', and " +
+				"'<b>Table View</b>'; " +
 				"then below those links is a display of the currently Active groups; " +
-				"and then below that is the view content." +
-				"\n\nIf you would like to take a look at the available online documentation, " +
-				"click the question mark at the top of the Configuration GUI window.\n\n" +
-
+				"and then below that is the view content.\n\n" +
+				
 				"Briefly, here is a description of the main views: " +
 				"\n\t- <b>System View:</b>\n<INDENT>This view is for viewing and editing the translation from System Aliases to groups.</INDENT>" +
 				"\n\t- <b>Group View:</b>\n<INDENT>This view is for viewing and editing groups of tables.</INDENT>" +
 				"\n\t- <b>Table View:</b>\n<INDENT>This view is for viewing and editing tables.</INDENT>" +
 				"\n\n" +
-				"You will see one more type view in the Configuration GUI and that is the 'Tree-view'." +
+				"There is one more type of view you will frequent as you grow familiar with the Configuration GUI and that is the '<b>Tree-view</b>'. " +
 				"Briefly, the 'Tree-view' is a way of viewing tables that are linked together - " +
-				"each group can be viewed in 'Tree-view' format.";
+				"each group can be viewed in 'Tree-view' format. The tree-view is hierarchical abstraction from the collection of row and column data from multiple tables.";
 
 
 			DesktopContent.tooltip("Configuration GUI Introduction",
