Changing default view to showing elements that are off

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -546,7 +546,7 @@
 		var treeViewBackLinkStr_;
 		var treeViewExpandedCapture_; //object to capture and load from on refresh
 		var treeGroupName_, treeGroupKey_;
-		var treeViewHideStatus_ = true;
+		var treeViewHideStatus_ = false;
 		var treeFilterApplied_ = false;
 		var treeViewHideInfo_ = true;
 		var treeFilter_ = "";
