--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -2185,7 +2185,8 @@
 			str += "<table cellpadding='0' cellspacing='0' border='0' style='float:left;'>";
 
 			//Debug.log("CfgGUI specificTableRequestHandler Member length " + tableNames.length + " - " + tableVersions.length);
-			for (var i = 0; i < tableNames.length && i < tableVersions.length; ++i) {
+			for (var i = 0; i < tableNames.length && i < tableVersions.length; ++i) 
+			{
 				tableName = tableNames[i].getAttribute("value");
 				version = tableVersions[i].getAttribute("value");
 				if (configComments[i])
@@ -2296,7 +2297,8 @@
 
 				tableExistingVersions = tableVersions[i].getElementsByTagName("TableExistingVersion");
 				var existingVersion;
-				for (var j = 0; j < tableExistingVersions.length; ++j) {
+				for (var j = 0; j < tableExistingVersions.length; ++j)
+				{
 					existingVersion = tableExistingVersions[j].getAttribute("value");
 					if ((existingVersion | 0) < 0 || //skip temporary versions and scratch version
 						(existingVersion | 0) == ConfigurationAPI._SCRATCH_VERSION) //scratch version will be shown as an alias
@@ -2306,7 +2308,8 @@
 						(existingVersion == 		//including if it's the scratch alias
 							ConfigurationAPI._VERSION_ALIAS_PREPEND +
 							ConfigurationAPI._SCRATCH_ALIAS &&
-							version == ConfigurationAPI._SCRATCH_VERSION)) {
+							version == ConfigurationAPI._SCRATCH_VERSION)) 
+					{
 						cfgVersionStr += existingVersion + ",";
 						str += " " + existingVersion; continue;
 					}
@@ -17150,7 +17153,7 @@
 				//hide alias area and subtract the height
 
 				document.getElementById("popUpDialog-groupAliasArea").style.display = "none";
-				popEl.style.height = (h + groupCommentHeight) + "px";
+				popEl.style.height = (h + 20 + groupCommentHeight) + "px";
 				ael.disabled = true;
 			}
 			else
