Add missing call to Configuration.getActiveGroups

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -581,7 +581,9 @@
 
 			Debug.log("CfgGUI init ");
 			Debug.logv({firstInit_});
-			
+			ConfigurationAPI.getActiveGroups(function (activeGroups) {
+				Debug.logv({activeGroups});
+			});
 
 //			ConfigurationAPI.getActiveGroups(function(activeGroups)
 //					{
